--- a/rust-api/Cargo.toml
+++ b/rust-api/Cargo.toml
@@ -44,5 +44,9 @@ actix-cors = "0.6"
 # Validation
 validator = { version = "0.16", features = ["derive"] }
 
+# OIDC/JWKS fetch
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+once_cell = "1.19"
+
 [dev-dependencies]
 tokio-test = "0.4"
