--- a/k8s/day6-7/app-configmap.yaml
+++ b/k8s/day6-7/app-configmap.yaml
@@ -26,6 +26,10 @@ data:
   CORS_ORIGIN: "*"
   CORS_METHODS: "GET,POST,PUT,DELETE,OPTIONS"
   CORS_HEADERS: "Content-Type,Authorization"
+  
+  # OIDC Configuration
+  OIDC_ISSUER: "https://keycloak.local/realms/lab"
+  OIDC_JWKS_URL: "https://keycloak.local/realms/lab/protocol/openid-connect/certs"
 ---
 apiVersion: v1
 kind: ConfigMap
