--- a/rust-api/Cargo.toml
+++ b/rust-api/Cargo.toml
@@ -44,12 +44,14 @@ actix-cors = "0.6"
 # Validation
 validator = { version = "0.16", features = ["derive"] }
 
+# HTTP client and async utilities
+reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
+once_cell = "1.19"
+futures-util = "0.3"
+tokio = { version = "1.0", features = ["rt"] }
+
 [features]
 default = []
-
-[dependencies.reqwest]
-version = "0.12"
-features = ["json", "rustls-tls", "blocking"]
 
 [dev-dependencies]
 tokio-test = "0.4"
