--- a/k8s/gitea/gitea.yaml
+++ b/k8s/gitea/gitea.yaml
@@ -58,6 +58,10 @@ spec:
               value: sqlite3
             - name: GITEA__database__PATH
               value: /data/gitea/gitea.db
+            - name: GITEA__actions__ENABLED
+              value: "true"
+            - name: GITEA__admin__DEFAULT_EMAIL_NOTIFICATIONS
+              value: "disabled"
           volumeMounts:
             - name: data
               mountPath: /data
