--- a/k8s/gitea/gitea.yaml
+++ b/k8s/gitea/gitea.yaml
@@ -57,14 +57,16 @@ spec:
             - name: GITEA__database__DB_TYPE
               value: sqlite3
             - name: GITEA__database__PATH
-              value: /data/gitea/gitea.db
+              value: /var/lib/gitea/data/gitea.db
+            - name: GITEA__repository__ROOT
+              value: /var/lib/gitea/data/gitea-repositories
             - name: GITEA__actions__ENABLED
               value: "true"
             - name: GITEA__admin__DEFAULT_EMAIL_NOTIFICATIONS
               value: "disabled"
           volumeMounts:
             - name: data
-              mountPath: /data
+              mountPath: /var/lib/gitea
       volumes:
         - name: data
           persistentVolumeClaim:
