Update Keycloak and ArgoCD configurations
- Changed KC_HOSTNAME from 'keycloak.local' to 'localhost' and added new hostname-related environment variables for improved local development.
- Updated ArgoCD app configuration to point to the new Gitea repository URL for better integration.

--- a/k8s/test-app/argocd-app.yaml
+++ b/k8s/test-app/argocd-app.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/Celine-Coralie-Eni/k3s-lab.git
+    repoURL: http://gitea.gitea.svc.cluster.local:3000/gitea-admin/k3s-lab.git
     targetRevision: HEAD
     path: k8s/test-app
   destination:
