--- a/k8s/keycloak/keycloak.yaml
+++ b/k8s/keycloak/keycloak.yaml
@@ -61,7 +61,13 @@ spec:
             - name: KC_PROXY
               value: edge
             - name: KC_HOSTNAME
-              value: keycloak.local
+              value: localhost
+            - name: KC_HOSTNAME_PORT
+              value: "8088"
+            - name: KC_HOSTNAME_STRICT
+              value: "false"
+            - name: KC_HOSTNAME_STRICT_HTTPS
+              value: "false"
             - name: KC_HTTP_ENABLED
               value: "true"
             - name: KC_HEALTH_ENABLED
