--- a/k8s/test-app/hello-world.yaml
+++ b/k8s/test-app/hello-world.yaml
@@ -24,23 +24,51 @@ spec:
     spec:
       containers:
       - name: hello-world
-        image: nginx:alpine
+        image: localhost:5000/hello-world-app:latest
+        imagePullPolicy: Always
         ports:
-        - containerPort: 80
+        - containerPort: 8000
         env:
-        - name: MESSAGE
-          value: "Hello from GitOps Pipeline! 🚀"
-        command: ["/bin/sh"]
+        - name: RUST_LOG
+          value: "info"
+      - name: oauth2-proxy
+        image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
         args:
-        - -c
-        - |
-          echo '<html><body><h1>Hello from GitOps Pipeline! 🚀</h1>
-          <p>This app was deployed via GitOps!</p>
-          <p>Deployed at: '$(date)'</p>
-          <p>Namespace: test-app</p>
-          <p>Pod: '$(hostname)'</p>
-          </body></html>' > /usr/share/nginx/html/index.html
-          nginx -g 'daemon off;'
+        - --provider=keycloak-oidc
+        - --oidc-issuer-url=http://keycloak.keycloak.svc.cluster.local/realms/lab
+        - --email-domain=*
+        - --http-address=0.0.0.0:4180
+        - --upstream=http://localhost:8000
+        - --cookie-secure=false
+        - --cookie-refresh=1h
+        - --cookie-name=_oauth2_proxy
+        - --skip-provider-button=true
+        - --pass-authorization-header=true
+        - --pass-access-token=true
+        - --set-authorization-header=true
+        - --reverse-proxy=true
+        - --whitelist-domain=.local
+        - --redirect-url=http://hello-world.local/oauth2/callback
+        - --insecure-oidc-skip-issuer-verification=true
+        env:
+        - name: OAUTH2_PROXY_CLIENT_ID
+          valueFrom:
+            secretKeyRef:
+              key: client-id
+              name: oauth2-proxy
+        - name: OAUTH2_PROXY_CLIENT_SECRET
+          valueFrom:
+            secretKeyRef:
+              key: client-secret
+              name: oauth2-proxy
+        - name: OAUTH2_PROXY_COOKIE_SECRET
+          valueFrom:
+            secretKeyRef:
+              key: cookie-secret
+              name: oauth2-proxy
+        ports:
+        - containerPort: 4180
+          name: oauth2
 ---
 apiVersion: v1
 kind: Service
@@ -54,7 +82,7 @@ spec:
     app: hello-world
   ports:
   - port: 80
-    targetPort: 80
+    targetPort: 4180
   type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
@@ -65,6 +93,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
+  ingressClassName: nginx
   rules:
   - host: hello-world.local
     http:
