Update ArgoCD app configuration to use internal Gitea URL and modify hello-world deployment for Keycloak integration
- Changed ArgoCD app repoURL to point to the internal Gitea service for better integration.
- Updated hello-world deployment to use nginx:alpine image and adjusted container port to 80 for compatibility with the new upstream configuration.

--- a/k8s/test-app/hello-world.yaml
+++ b/k8s/test-app/hello-world.yaml
@@ -24,10 +24,10 @@ spec:
     spec:
       containers:
       - name: hello-world
-        image: localhost:5000/hello-world-app:latest
+        image: nginx:alpine
         imagePullPolicy: Always
         ports:
-        - containerPort: 8000
+        - containerPort: 80
         env:
         - name: RUST_LOG
           value: "info"
@@ -38,7 +38,7 @@ spec:
         - --oidc-issuer-url=http://keycloak.keycloak.svc.cluster.local/realms/lab
         - --email-domain=*
         - --http-address=0.0.0.0:4180
-        - --upstream=http://localhost:8000
+        - --upstream=http://localhost:80
         - --cookie-secure=false
         - --cookie-refresh=1h
         - --cookie-name=_oauth2_proxy
